mapper and images